Fix z-index inline alert (reset value to ‘auto’).

--- a/assets/stylesheets/scss/components/_alert.scss
+++ b/assets/stylesheets/scss/components/_alert.scss
@@ -26,6 +26,7 @@
 .Alert--inline {
 	border-color: $gray-3;
 	border-radius: $border-radius;
+	z-index: auto;
 }
 
 /**
